Ajuste de erros nas versões do ngrx/effects

--- a/CursoNgRx/package.json
+++ b/CursoNgRx/package.json
@@ -18,10 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@ngrx/effects": "^16.2.0",
-    "@ngrx/store": "^16.2.0",
-    "@ngrx/store-devtools": "^16.2.0",
+    "@ngrx/effects": "^15.4.0",
+    "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
     "bootstrap": "^5.3.1",
+    "concurrently": "^8.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
