--- a/CursoNgRx/package.json
+++ b/CursoNgRx/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store-devtools": "^15.4.0",
     "bootstrap": "^5.3.1",
     "concurrently": "^8.2.1",
+    "lint": "^0.8.19",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
