--- a/teste-unitario/.vscode/settings.json
+++ b/teste-unitario/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
     "cSpell.words": [
         "desindexados"
-    ]
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#ae16ff",
+        "activityBar.background": "#ae16ff",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#00ff3d",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#ae16ff",
+        "statusBar.background": "#ae16ff",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#ae16ff",
+        "statusBarItem.remoteBackground": "#ae16ff",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#ae16ff",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#ae16ff",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#ae16ff"
 }
